syntax = "proto3";

option java_multiple_files = true;
option java_package = "to.klay.wspro.core.game.proto";
option java_outer_classname = "ProtoGameMessages";

import "ProtoEntities.proto";
import "PlayRequest.proto";


message GameMessageProto {
  oneof gameEvent {
    PlayRequestProto request = 1;
    GameTriggerProto trigger = 2;
  }
}

