syntax = "proto3";

option java_multiple_files = true;
option java_package = "to.klay.wspro.server.grpc.gameplay";
option java_outer_classname = "GamePlayProto";

import "google/protobuf/empty.proto";
import "to/klay/wspro/core/game/proto/gameMessages.proto";
package gameplay;

service PlayWeissService{
  rpc connectToGame(GrpcGameConnectRequest) returns (GrpcGameConnectResponse);
  rpc readyUp(GrpcPlayerToken) returns (GrpcSuccessResponse);
  //todo all the playgame rpcs....
  rpc listenToGameEvents(GrpcPlayerToken) returns (stream to.klay.wspro.core.game.proto.GameMessageProto);
  rpc answerPlayRequest(GrpcPlayResponse) returns (google.protobuf.Empty);
}

message GrpcGameConnectRequest{
  string gameIdentifier = 1;
  string playerName = 2;

}
message GrpcGameConnectResponse{
  bool connectionAccepted = 1;
  GrpcPlayerToken token = 2;
}

message GrpcPlayResponse {
    GrpcPlayerToken token = 1;
    repeated int32 choiceNumber = 2;
}

message GrpcPlayerToken{
  string token = 1;
  string playerName = 2;
}

message GrpcSuccessResponse {
  bool wasSuccessful = 1;
}


